    + [RA] Make the syntax checking of shell scripts more robust against
      filenames containing shell metacharacters.  Reported by Michael
      Stilkerich.
    + [RA] Add fish and expectk to the list of valid interpreters.
      (Closes: #351624, #353770)
    + [RA] /usr/bin/tcl is provided by tclx8.3, not tcl.  Reported by
      James R. Van Zandt.  (Closes: #351324)
  * checks/shared-libs:
    + [JvW] Fix postinst-must-call-ldconfig to also get emitted when there is
      no postinst at all, instead of just one lacking a ldconfig call

  * debian/{control,copyright}:
    + [RA] Add Russ Allbery to Uploaders and copyright.

  * frontends/lintian-info:
    + [RA] Avoid Perl uninitialized value warnings when given output that
      looks like lintian messages without tags.  (Closes: #352606)

  * collection/objdump-info:
    + [RA] Pass "Invalid operation" errors from objdump -T on to the check
      scripts instead of failing.  (Closes: #249435)

  * man/lintian.1:
    + [RA] Add references to dh_make, debhelper, dpkg-buildpackage, and
      linda in new reference sections.  (Closes: #322288)
  * man/{lintian.1,lintian-info.1}:
    + [RA] Left-justify and disable hyphenation for readability.

  * testset/runtests:
    + [RA] Filter out dpkg-source warnings about unsigned source packages.

 -- Russ Allbery <rra@debian.org>  Thu,  9 Feb 2006 11:27:55 -0800

lintian (1.23.15) unstable; urgency=low
  
  * The "www.no-name-yet.eu" release
  
  * debian/changelog:
    + [FL] Fix wrapping of last changelog entry (Closes: #344899)

  * checks/common_data.pm:
    + [FL] Add xlibs-dev and debmake to %known_obsolete_packages
  * checks/debconf:
    + [CW] Show template name for empty-translated-choices,
      mismatch-translated-choices, and unknown-field-in-templates.
  * checks/debhelper:
    + [FL] Also check for debhelper build-dependency in debhelper-using
      cdbs based packages
    + [FL] Indicate where we found which compat version in